Add: staging enviroment, network config, firebase remote config and gradle configurations

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
+# Built application files
+*.apk
+*.aar
+*.ap_
+*.aab
+
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
 *.iml
-.gradle
-/local.properties
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
@@ -8,7 +20,6 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
 /captures
 .externalNativeBuild
 .cxx
