--- a/buildsystem/variants.gradle
+++ b/buildsystem/variants.gradle
@@ -3,11 +3,22 @@ ext {
             versionCode : 11,
             versionName : "1.2.3",
             applicationId : "com.studiomobile.sample",
-            appName : "Prueba Clean architecture kotlin",
+            appName : "Clean architecture kotlin",
 
             host: [
                     debug: "https://reqres.in",
-                    release: "https://real" // real host
+                    staging: "https://staging",
+                    release: "https://real"
+            ],
+            api_key: [
+                    debug: "debugKey",
+                    staging: "stagingKey",
+                    release: "realeseKey"
+            ],
+            android_id: [
+                    debug: "debugId",
+                    staging: "stagingId",
+                    release: "realeseId"
             ]
     ]
 
@@ -26,18 +37,19 @@ ext {
         def value = formatValue(variant, type, entry)
         variant.resValue(type, key, value)
 
-        logVariant(variant, "[$key]($value)")
+        logVariant(variant, "$key: $value")
     }
 
     setVariantBuildConfigField = { variant, type, key, entry ->
         def value = formatValue(variant, type, entry.get(variant.buildType.name))
         variant.buildConfigField(type, key, value)
 
-        logVariant(variant, "[$key]($value)")
+        logVariant(variant, "$key: $value")
     }
 
     logVariant = { variant, message ->
-        def color = variant.buildType.name == "debug" ? "green" :  "blue"
+        def variantName = variant.buildType.name
+        def color = variantName == "debug" ? "green" : variantName == "staging" ? "cyan" : "blue"
         log(color, message)
     }
 
